--- a/src/index.css
+++ b/src/index.css
@@ -66,3 +66,8 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+@font-face {
+  font-family: 'PixelatedFont';
+  src: url(./assets/PixelOperatorMono-Bold.ttf);
+}
