--- a/src/App.css
+++ b/src/App.css
@@ -54,70 +54,13 @@
   background-size: 100% 100%;*/
 }
 
-.itBtn{
-  position:fixed;
-  bottom:-0.1%;
-  right:30%;
-  height:5.5%;
-  width:9%;
-  background-image: url(./assets/PCBtn.png);
-  background-position: center;
-  background-repeat:no-repeat;
-  background-size: 100% 100%;
-  background-color: transparent;
-  font-family: PixelatedFont;
-  font-size:5vh;
-  color:#c7c7dc;
-  text-align: center;
-  line-height: 5.5%;
-  padding: 0px;
-}
-
-.musicBtn{
-  position:fixed;
-  bottom:-0.1%;
-  right:21%;
-  height:5.5%;
-  width:9%;
-  background-image: url(./assets/PCBtn.png);
-  background-position: center;
-  background-repeat:no-repeat;
-  background-size: 100% 100%;
-  background-color: transparent;
-  font-family: PixelatedFont;
-  font-size:5vh;
-  color:#c7c7dc;
-  text-align: center;
-  line-height: 5.5%;
-  padding: 0px;
-}
-
-.artBtn{
-  position:fixed;
-  bottom:-0.1%;
-  right:12%;
-  height:5.5%;
-  width:9%;
-  background-image: url(./assets/PCBtn.png);
-  background-position: center;
-  background-repeat:no-repeat;
-  background-size: 100% 100%;
-  background-color: transparent;
-  font-family: PixelatedFont;
-  font-size:5vh;
-  color:#c7c7dc;
-  text-align: center;
-  line-height: 5.5%;
-  padding: 0px;
-}
-
 .contactBtn{
   position:fixed;
   bottom:-0.1%;
   right:3%;
   height:5.5%;
   width:9%;
-  background-image: url(./assets/PCBtn.png);
+  background: url(./assets/PCBtn.png) ;
   background-position: center;
   background-repeat:no-repeat;
   background-size: 100% 100%;
@@ -128,4 +71,13 @@
   text-align: center;
   line-height: 5.5%;
   padding: 0px;
+}
+
+.Buttons{
+  bottom:-0.2%;
+  width:100%;
+  height:5.5%;
+  margin: 0 auto;
+  position:fixed;
+  z-index: 1;
 }
