Font weight and name

--- a/src/components/pcButton.css
+++ b/src/components/pcButton.css
@@ -8,6 +8,7 @@
   background-size: 100% 100%;
   background-color: transparent;
   font-family: PixelatedFont;
+  font-weight: bold;
   font-size:5vh;
   color:#c7c7dc;
   text-align: center;
