--- a/src/App.css
+++ b/src/App.css
@@ -54,6 +54,20 @@
   background-size: 100% 100%;*/
 }
 
+.name{
+  position:fixed;
+  top:2.5vh;
+  left:4%;
+  height:100vh;
+  width:100%;
+  margin: 0 auto;
+  font-family: PixelatedFont;
+  font-size:4vh;
+  color:#c7c7dc;
+  text-align: left;
+  line-height: 5.5%;
+}
+
 .crtLines{
   position:fixed;
   top:0px;
