--- a/src/App.css
+++ b/src/App.css
@@ -61,11 +61,13 @@
   height:100vh;
   width:100%;
   margin: 0 auto;
-  font-family: PixelatedFont;
-  font-size:4vh;
-  color:#c7c7dc;
+  /*font-family: PixelatedFont;*/
+  font-weight:100;
+  font-size:3.5vh;
+  color:#b6b6ca;
   text-align: left;
-  line-height: 5.5%;
+  line-height: 5%;
+  pointer-events: none;
 }
 
 .crtLines{
@@ -75,6 +77,45 @@
   height:100vh;
   width:100%;
   margin: 0 auto;
+}
+
+.blueTint{
+  position:fixed;
+  top:5vh;
+  left:2.5%;
+  height:90vh;
+  width:95%;
+  margin: 0 auto;
+  background-color: #00c8ff1e;
+  box-shadow: inset 0 0 150px #000000e7;
+}
+
+.screenStatic{
+  position:absolute;
+  inset:-200%;
+  background-image:url(./assets/tvStatic.jpg);
+  opacity:5%;
+  animation: staticShift 0.2s linear infinite both;
+}
+
+@keyframes staticShift{
+  0%{
+    transform:translateX(10%) translateY(10%);
+  }
+  100%{
+    transform:translateX(-10%) translateY(-10%);
+  }
+}
+
+.blueGlow{
+  position:fixed;
+  top:5vh;
+  left:2.5%;
+  height:90vh;
+  width:95%;
+  margin: 0 auto;
+  box-shadow: 0 0 30px #00c8ff31;
+  z-index:2;
 }
 
 .contactBtn{
@@ -98,6 +139,7 @@
 
 .Buttons{
   bottom:-0.2%;
+  left:26%;
   width:100%;
   height:5.5%;
   margin: 0 auto;
