--- a/src/components/pcButton.css
+++ b/src/components/pcButton.css
@@ -7,12 +7,13 @@
   background-repeat:no-repeat;
   background-size: 100% 100%;
   background-color: transparent;
-  font-family: PixelatedFont;
-  font-weight: bold;
-  font-size:5vh;
-  color:#c7c7dc;
+  font-family:serif;
+  /*font-family: PixelatedFont;
+  font-weight: bold;*/
+  font-size:4.5vh;
+  color:#b6b6ca;
   text-align: center;
-  line-height: 5.5%;
+  line-height: 5%;
   padding: 0px;
   display:inline-block;
   border: 0;
@@ -25,6 +26,7 @@
   background-repeat:no-repeat;
   background-size: 100% 100%;
   background-color: transparent;
+  color:#8a8a97;
 }
 
 .buttonComponent:hover{
